# USD

./: .gitignore  CMakeLists.txt
pxr/base/arch/: CMakeLists.txt
pxr/base/gf/: CMakeLists.txt  plane.h
pxr/base/js/: CMakeLists.txt
pxr/base/plug/: CMakeLists.txt
pxr/base/tf/: CMakeLists.txt  fastCompression.cpp  stringUtils.cpp  token.cpp
pxr/base/trace/: CMakeLists.txt  dataBuffer.cpp  eventNode.cpp  eventTreeBuilder.cpp
pxr/base/vt/: CMakeLists.txt
pxr/base/work/: CMakeLists.txt
pxr/usd/ar/: CMakeLists.txt
pxr/usd/kind/: CMakeLists.txt
